--- a/MarvelChampionsMatchTrackerBackend/src/main/resources/application.properties
+++ b/MarvelChampionsMatchTrackerBackend/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.platform=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/marvelchampionsmatchtrackerdb
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.hibernate.ddl-auto=update
